--- a/LSTM.ipynb
+++ b/LSTM.ipynb
@@ -28,7 +28,7 @@
     "#     i_str = str(i)\n",
     "#     if i % 10 == i:\n",
     "#         i_str = '0'+i_str\n",
-    "#     url = f'https://www.alphavantage.co/query?function=TIME_SERIES_INTRADAY&symbol=MSFT&interval=60min&month=2020-{i_str}&outputsize=full&apikey=2TU3VVSS2DD06FED&datatype=csv'\n",
+    "#     url = f'https://www.alphavantage.co/query?function=TIME_SERIES_INTRADAY&symbol=MSFT&interval=60min&month=2020-{i_str}&outputsize=full&apikey=&datatype=csv'\n",
     "#     r = requests.get(url, allow_redirects=True)\n",
     "#     open(f'train_data/60min_MSFT_2020_{i_str}.csv', 'wb').write(r.content)"
    ]
